# Push_swap

./: CMakeLists.txt  Makefile  README.md  a.txt  ans.txt  ans100.txt  ans2.txt  ans50.txt  ans500.txt  check_arg.c  check_arg_2.c  check_b.c  checker.c  ft_sort.c  ft_split_2.c  get_next_line.c  less_5_param.c  libft_lst.c  main.c  operation_a.c  operation_b.c  operation_both.c  print_lst.c  push_swap  push_swap.c  push_swap.h  read_arg.c  test.txt  test0.txt  test_100.txt  test_15.txt  test_50.txt  throw_nb_stack.c
check/: Makefile  checker  checker.c
libft/: libft.h.gch
